# OCTACHIP

./: .eslintrc.js  .gitignore  .prettierignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  package-lock.json  package.json  webpack.config.js
.github/workflows/: build_test_deploy.yml
src/: CMakeLists.txt  emulator.cpp  emulator.hpp  frame.hpp  instructions.hpp  interpreter.cpp  interpreter.hpp  main.cpp  opcode.cpp  opcode.hpp  random.cpp  random.hpp  registers.hpp  types.hpp  wasm_emulator.cpp  wasm_emulator.hpp  wasm_main.cpp
src/core/: frame.cpp  frame.hpp  instructions.cpp  instructions.hpp  interpreter.cpp  interpreter.hpp  opcode.cpp  opcode.hpp  random.cpp  random.hpp  types.hpp
src/io/: input.cpp  input.hpp  renderer.cpp  renderer.hpp
tests/: CMakeLists.txt  fixtures.hpp  instructions-tests.cpp  instructions_tests.cpp  mocks.hpp
tests/fixtures/: instruction_test.hpp
tests/instructions/: arithmetic_instructions.cpp  flow_instructions.cpp  io_instructions.cpp  load_instructions.cpp  misc_instructions.cpp
tests/mocks/: mock_random.hpp
web/: index.html  index.js  octachip.data  octachip.js  octachip.wasm  reset.css  roms.json  shell.html  style.css  template.html
web/scripts/: app.js  emulator_controller.js  emulator_controls.js  index.js  keypad.js  monitor.js  ui.js  utils.js
web/styles/: reset.css  style.css
